# rust-learn

./: .env_example  README.md
database/: setup.sql  user_seeder.sql
p01_user_api/: Cargo.toml
p01_user_api/src/: config.rs  main.rs  routes.rs
p01_user_api/src/handlers/: user.rs
p01_user_api/src/models/: user.rs
p02_auth_system/: Cargo.toml
p02_auth_system/src/: main.rs
p02_auth_system/src/auth/: jwt.rs  login.rs  middleware.rs  mod.rs  register.rs
p02_auth_system/src/db/: mod.rs
p02_auth_system/src/routes/: protected.rs
p03_crud_blog/: Cargo.toml
p04_task_manager/: Cargo.toml
p05_microservice_demo/: Cargo.toml
