[package]
name = "p01_user_api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }  # Untuk serialisasi
serde_json = "1.0"  # Untuk JSON handling
axum = "0.8.3"
hyper = "1.6.0"
actix-service = "2.0.3"
env_logger = "0.10"
log = "0.4" 
argon2 = "0.5"
rand_core = "0.6"
password-hash = "0.5"
