[package]
name = "p02_auth_system"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
jsonwebtoken = "7.2.0"  # Untuk autentikasi JWT
bcrypt = "0.12"  # Untuk hashing password
actix-web = "4.0"  # Untuk membuat API dengan Actix
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"