[package]
name = "p02_auth_system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12.0"  # Untuk hashing password
jsonwebtoken = "7.2.0"  # Untuk JSON Web Token (JWT)
tower = "0.4"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros"] }
syn = { version = "1.0", features = ["derive", "parsing", "printing"] }
dotenv = "0.15"  # Untuk loading environment variables
chrono = "0.4"  # Untuk manipulasi waktu
uuid = { version = "1.0", features = ["v4"] }
dotenvy = "0.15.7"
