[package]
name = "p04_task_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
actix-web = "4.0"  # API framework
serde = { version = "1.0", features = ["derive"] }  # Serialisasi
serde_json = "1.0"  # JSON parsing
mysql = "24.0.0"  # Koneksi ke MySQL
bcrypt = "0.12"  # Untuk password hashing
jsonwebtoken = "7.2.0"  # Untuk autentikasi dengan JWT